[CSS Regions] Don't apply region flow to fullscreen video playing https://bugs.webkit.org/show_bug.cgi?id=102388

Reviewed by David Hyatt.

In case of full screen video playing we want to watch the video full screen without applying the region flow.

Source/WebCore:

Test: fast/regions/full-screen-video-from-region.html

* dom/NodeRenderingContext.cpp:
(WebCore::NodeRenderingContext::moveToFlowThreadIfNeeded): Don't move full screen video playing to FlowThread.

LayoutTests:

* fast/regions/full-screen-video-from-region-expected.txt: Added.
* fast/regions/full-screen-video-from-region.html: Added.
* platform/chromium-mac/fast/regions/full-screen-video-from-region-expected.png: Added.



Canonical link: https://commits.webkit.org/124231@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138755 268f45cc-cd09-0410-ab3c-d52691b4dbfc